--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -22,6 +22,13 @@
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>service.LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>PostGoodService</servlet-name>
+    <servlet-class>service.PostGoodService</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>ConfirmPageController</servlet-name>
@@ -37,6 +44,10 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/servlet/LoginServlet</url-pattern>
 
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PostGoodService</servlet-name>
+    <url-pattern>/servlet/PostGoodService</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
