--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="E:/workspace_me/NaCl-fish/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="E:/workspace_me/NaCl-fish/mysql-connector-java-5.1.44/commons-fileupload-1.3.2.jar"/>
+	<classpathentry kind="lib" path="E:/workspace_me/NaCl-fish/mysql-connector-java-5.1.44/commons-io-2.5.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
