--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -28,6 +28,20 @@
     <servlet-name>PostGoodService</servlet-name>
     <servlet-class>service.PostGoodService</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>RegisterServlet</servlet-name>
+    <servlet-class>service.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>DeleteGoodServlet</servlet-name>
+    <servlet-class>service.DeleteGoodServlet</servlet-class>
+  </servlet>
+
+
 
 
   <servlet-mapping>
@@ -48,6 +62,14 @@
   <servlet-mapping>
     <servlet-name>PostGoodService</servlet-name>
     <url-pattern>/servlet/PostGoodService</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>RegisterServlet</servlet-name>
+    <url-pattern>/servlet/RegisterServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DeleteGoodServlet</servlet-name>
+    <url-pattern>/servlet/DeleteGoodServlet</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
